--- a/js/styles.css
+++ b/js/styles.css
@@ -1,3 +1,36 @@
+body {
+    background: #f2f2f2;
+}
+
+.btn-clipboard {
+    background-color: #4CAF50; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+
+
+.reelTitle {
+    background-color: #99ccff;
+    border: 1px solid #66b3ff;
+    color: white;
+
+    height:30px;
+    width:100px;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    font-size: 16px;
+
+
+}
+
 .reels {
     font-size: 0;
 }
@@ -6,8 +39,8 @@
     display: inline-block;
     border: 1px solid #000;
     vertical-align: top;
-    height:200px;
-    width:200px;
+    height:120px;
+    width:80px;
     overflow:auto;
 
     color:black;
@@ -17,12 +50,31 @@
 }
 
 .reel > p {
-     font-size: 15px;
-     font-weight: bold;
- }
+    font-size: 15px;
+    font-weight: bold;
+}
 .reel > div {
     font-size: 13px;
 }
+
+.symbol{
+    background-color: #99ccff;
+    border: 1px solid #66b3ff;
+    color: white;
+
+    height:20px;
+    width:60px;
+    text-align: center;
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    display: inline-block;
+    font-size: 16px;
+}
+
+
 p{
     display: inline;
 }
+
+
+
