added new layout staff

--- a/js/styles.css
+++ b/js/styles.css
@@ -100,7 +100,12 @@ body {
 p{
     display: inline;
 }
-.try {
+
+.outcome {
+    
+}
+
+.reelSet {
     display: inline-block;
     border: 1px solid #000;
 
